--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,5 +1,17 @@
 <ion-view view-title="Search">
   <ion-content>
-    <h1>Search</h1>
+    <p>Pesquisar Acões dos Vereadores</p>
+    
+    <ul class="list">
+      <li class="item" ng-click="vm.redirect('app.bairros')">
+          Bairros <span ng-show="vm.bairro.id">({{vm.bairro.nome}})</span> 
+      </li>
+      <li class="item" ng-click="vm.redirect('app.vereadores')">
+        Vereadores <span ng-show="vm.vereador.id">({{vm.vereador.nome_parlamentar}})</span>
+      </li>
+      <li class="item" ng-click="vm.redirect('app.assuntos')">
+        Assuntos <span ng-show="vm.assunto.id">({{vm.assunto.descricao}})</span> 
+      </li>
+    </ul>
   </ion-content>
 </ion-view>
