--- a/www/templates/bairros.html
+++ b/www/templates/bairros.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Vereadores">
+<ion-view view-title="Bairros">
   <ion-content>
     <div class="list list-inset">
       <label class="item item-input">
