--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -13,7 +13,7 @@
           <input type="text" ng-model="assunto" placeholder="Assunto" />
       </li>
 
-      <button class="button button-full button-positive">
+      <button class="button button-full button-positive" ng-click="vm.pesquisar()">
           Pesquisar
       </button>
     </ul>
