ajustando a mini-bio dos vereadores

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,18 +18,12 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item menu-close icon-off="ion-person" icon-on="ion-person" href="#/app/search">
+          Pesquisar
+        </ion-item>
         <ion-item menu-close ng-click="login()">
           Estou seguindo
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Pesquisar
-        </ion-item>
-        <!-- <ion-item menu-close href="#/app/browse">
-          Browse
-        </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Playlists
-        </ion-item> -->
       </ion-list>
     </ion-content>
   </ion-side-menu>
