--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,10 +18,12 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close icon-off="ion-person" icon-on="ion-person" href="#/app/search">
+        <ion-item menu-close href="#/app/search">
+          <i class="ion-search"></i>
           Pesquisar
         </ion-item>
         <ion-item menu-close ng-click="login()">
+          <i class="ion-android-star"></i>
           Estou seguindo
         </ion-item>
       </ion-list>
