--- a/www/templates/vereadores.html
+++ b/www/templates/vereadores.html
@@ -10,7 +10,7 @@
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="item in vm.listaItens | filter: search" ng-click="vm.select(item)">
         <img ng-src="{{item.url_foto}}">
         <h2>{{item.nome_parlamentar}}</h2>
-        <p>{{item.biografia}}</p>
+        <p>Partido atual: {{item.partido_atual}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
