--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -4,13 +4,15 @@
 
     <ul class="list">
       <li class="item" ng-click="vm.redirect('app.bairros')">
-          Bairros <span ng-show="vm.bairro.id">({{vm.bairro.nome}})</span>
+        <i class="ion-home"></i>
+        Bairros <span ng-show="vm.bairro.id">({{vm.bairro.nome}})</span>
       </li>
       <li class="item" ng-click="vm.redirect('app.vereadores')">
+        <i class="ion-person-stalker"></i>
         Vereadores <span ng-show="vm.vereador.id">({{vm.vereador.nome_parlamentar}})</span>
       </li>
       <li class="item" ng-click="vm.redirect('app.assuntos')">
-          <input type="text" ng-model="vm.assunto" placeholder="Assunto" />
+        <input type="text" ng-model="vm.assunto" placeholder="Assunto" />
       </li>
 
       <button class="button button-full button-positive" ng-click="vm.pesquisar()">
