--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Siga Câmara">
   <ion-content>
-    <p>Pesquisar Acões dos Vereadores</p>
-
+    <div class="padding">Pesquisar Registros dos Vereadores</div>
+    
     <ul class="list">
       <li class="item" ng-click="vm.redirect('app.bairros')">
         <i class="ion-home"></i>
@@ -11,7 +11,7 @@
         <i class="ion-person-stalker"></i>
         Vereadores <span ng-show="vm.vereador.id">({{vm.vereador.nome_parlamentar}})</span>
       </li>
-      <li class="item" ng-click="vm.redirect('app.assuntos')">
+      <li class="item">
         <input type="text" ng-model="vm.assunto" placeholder="Assunto" />
       </li>
 
