--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -26,6 +26,10 @@
           <i class="ion-android-star"></i>
           Estou seguindo
         </ion-item>
+        <ion-item menu-close href="#/app/vereadores">
+          <i class="ion-android-star"></i>
+          Todos Vereadores
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
