--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,3 +8,36 @@
   line-height: 30px;
   box-shadow: 0px 2px 5px #666;
 }
+
+#map {
+  height: 100%;
+}
+/* Optional: Makes the sample page fill the window. */
+padding: 0;
+html, body {
+  height: 100%;
+  margin: 0;
+}
+#floating-panel {
+  position: absolute;
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: 'Roboto','sans-serif';
+  line-height: 30px;
+  padding-left: 10px;
+}
+
+#floating-panel {
+  background-color: #fff;
+  border: 1px solid #999;
+  left: 25%;
+  padding: 5px;
+  position: absolute;
+  top: 10px;
+  z-index: 5;
+}
