--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,15 +22,17 @@
           <i class="ion-search"></i>
           Pesquisar
         </ion-item>
+
         <ion-item menu-close ng-click="login()">
           <i class="ion-android-star"></i>
           Estou seguindo
         </ion-item>
-        <ion-item menu-close href="#/app/vereadores">
+
+        <ion-item menu-close href="#/app/vereadores" ng-click="prepararConsultarDados()">
           <i class="ion-android-star"></i>
           Todos Vereadores
         </ion-item>
-        
+
         <ion-item menu-close ng-click="#/app/map">
           <i class="ion-map"></i>
           Mapa de influência
