ranking por tópico e materia na tela de vereador

--- a/www/templates/materia-detail.html
+++ b/www/templates/materia-detail.html
@@ -54,7 +54,7 @@
               <!-- cd-timeline-img -->
               <div class="cd-timeline-content royal">
                 <h5 class="marginBottom0 marginTop0">{{activity.origem}} para {{activity.destino}} ({{activity.status_tramitacao}})</h5>
-                <p class="marginTop5 cd-author">{{activity.dat_tramitacao | date: "d/m/Y"}}</p>
+                <p class="marginTop5 cd-author">{{activity.dat_tramitacao | date: "dd/MM/yyyy"}}</p>
                 <p class="timelineText">{{activity.txt_tramitacao}}</p>
               </div>
             </div>
