--- a/www/templates/materiais.html
+++ b/www/templates/materiais.html
@@ -9,10 +9,10 @@
         </ion-item>
       </ion-list>
 
-      <div class="row" ng-show="vm.listaItens.length <= 0 && !vm.loading">
+      <div class="padding" ng-show="vm.listaItens.length <= 0 && !vm.loading">
         Nenhum registro encontrado para os filtros selecionados.
       </div>
-
+      {{"2017-12-15" | date: "dd/MM/yyyy"}}
       <div class="row padding" ng-show="vm.loading">
         <ion-spinner></ion-spinner> <span>Buscando registros...</span>
       </div>
