--- a/www/templates/vereador.html
+++ b/www/templates/vereador.html
@@ -6,7 +6,52 @@
           <div class="item">
               <strong>Partido Atual:</strong> {{vm.vereador.partido_atual}}
           </div>
-  
+          
+
+          <h4>
+            <strong>Tópicos por Materia:</strong>
+          </h4>
+          
+          <div class="row responsive-sm">
+            <div class="col">
+                <div ng-hide="vm.rankeTipoMateria">
+                    Consultando bairros com atuação
+                </div>
+                <ul ng-show="vm.rankeTipoMateria">
+                    <li ng-repeat="item in vm.rankeTipoMateria track by $index" ng-if="item.qtd>0 && ( $index < 3 || vm.showTipoAll === true)">
+                      <strong>{{item.tipo_materia}}</strong>: {{item.qtd}} 
+                      <ng-pluralize count="item.qtd" when="{ 'one': 'materia',  'other': 'materias'}"></ng-pluralize>
+                    </li>
+                    <button ng-click="vm.showTipoAll=!vm.showTipoAll">
+                      <span ng-hide="vm.showTipoAll">ver mais</span>
+                      <span ng-show="vm.showTipoAll">ver menos</span>
+                    </button>
+                </ul>
+              </div>
+            </div>
+
+            <h4>
+              <strong>Materias por Bairro:</strong>
+            </h4>
+            
+            <div class="col">
+              <div ng-hide="vm.rankBairro">
+                 Consultando bairros com atuação
+              </div>
+              <ul ng-show="vm.rankBairro">
+                  <li ng-repeat="item in vm.rankBairro track by $index" ng-if="item.qtd>0 && ( $index < 3 || vm.showAll === true)">
+                    <strong>{{item.bairro}}</strong>: {{item.qtd}} 
+                    <ng-pluralize count="item.qtd" when="{ 'one': 'materia',  'other': 'materias'}"></ng-pluralize>
+                  </li>
+                  <button ng-click="vm.showAll=!vm.showAll">
+                      <span ng-hide="vm.showAll">ver mais</span>
+                      <span ng-show="vm.showAll">ver menos</span>
+                  </button>
+              </ul>
+            </div>
+          </div>
+        
+
           <div class="padding">
             <strong>Biografia:</strong> {{vm.vereador.biografia}}
           </div>
