correções gerais, dados de sumarização para bairro e vereador

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -32,7 +32,12 @@
           <i class="ion-android-star"></i>
           Todos Vereadores
         </ion-item>
-        
+
+        <ion-item menu-close href="#/app/bairros" ng-click="prepararConsultarDados()">
+          <i class="ion-android-star"></i>
+          Todos Bairros
+        </ion-item>
+
         <ion-item menu-close href="#/app/map">
           <i class="ion-map"></i>
           Mapa de influência
