--- a/www/templates/vereador.html
+++ b/www/templates/vereador.html
@@ -6,7 +6,7 @@
         <div class="item">
             <strong>Partido Atual:</strong> {{vm.vereador.partido_atual}}
         </div>
-        
+
           <div class="card">
             <div class="item item-divider">
                 Tópicos por Materia:
@@ -17,7 +17,7 @@
               </div>
               <ul ng-show="vm.rankeTipoMateria">
                   <li ng-repeat="item in vm.rankeTipoMateria track by $index" ng-if="item.qtd>0 && ( $index < 3 || vm.showTipoAll === true)">
-                    <strong>{{item.tipo_materia}}</strong>: {{item.qtd}} 
+                    <strong>{{item.tipo_materia}}</strong>: {{item.qtd}}
                     <ng-pluralize count="item.qtd" when="{ 'one': 'materia',  'other': 'materias'}"></ng-pluralize>
                   </li>
                   <hr />
@@ -28,7 +28,7 @@
               </ul>
             </div>
           </div>
-          
+
           <div class="card">
             <div class="item item-divider">
                 Materias por Bairro:
@@ -39,7 +39,7 @@
                   </div>
                   <ul ng-show="vm.rankBairro">
                       <li ng-repeat="item in vm.rankBairro track by $index" ng-if="item.qtd>0 && ( $index < 3 || vm.showAll === true)">
-                        <strong>{{item.bairro}}</strong>: {{item.qtd}} 
+                        <strong>{{item.bairro}}</strong>: {{item.qtd}}
                         <ng-pluralize count="item.qtd" when="{ 'one': 'materia',  'other': 'materias'}"></ng-pluralize>
                       </li>
                       <br />
@@ -50,16 +50,18 @@
                   </ul>
             </div>
           </div>
-         
+
 
           <div class="padding">
             <strong>Biografia:</strong> {{vm.vereador.biografia}}
           </div>
-  
+
+          <button class="button button-block button-positive"  href="">
+              Mapa de influência
+           </button>
           <button class="button button-block button-positive"  ng-click="login()">
               Seguir Vereador
            </button>
       </div>
     </ion-content>
   </ion-view>
-  
