--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -29,12 +29,12 @@
         </ion-item>
 
         <ion-item menu-close href="#/app/vereadores" ng-click="prepararConsultarDados()">
-          <i class="ion-android-star"></i>
+          <i class="ion-person-stalker"></i>
           Todos Vereadores
         </ion-item>
 
         <ion-item menu-close href="#/app/bairros" ng-click="prepararConsultarDados()">
-          <i class="ion-android-star"></i>
+          <i class="ion-ios-home"></i>
           Todos Bairros
         </ion-item>
 
